fixed issue with redundunt white space on right

--- a/styling.css
+++ b/styling.css
@@ -45,7 +45,7 @@ body {
 }
 
 .nav-container {
-    background-color: #f5f5f5;
+    background-color: rgba(245,245,245,0.5);
     width: 20%;
     height: 100%;
     position: fixed;
@@ -242,7 +242,7 @@ p.title {
 }
 
 #plane-img {
-    height: 100%;
+    width: 100%;
     opacity: 0.1;
 }
 
@@ -302,7 +302,7 @@ textarea:focus, input[type="text"]:focus, input[type="submit"]:focus, #sender_me
     display: inline-block;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 60%;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
@@ -353,6 +353,7 @@ textarea:focus, input[type="text"]:focus, input[type="submit"]:focus, #sender_me
     height: 60px;
     background-color: black;
     color: white;
+    overflow: hidden;
     /*background-color: #f5f5f5;*/
 }
 
